- Fixed GlyphLayout for fixed width glyph offsets at the start and end of lines.
- Fixed scene2d.ui layout for fractional positions and sizes.
- libGDX is now built using Java 17 due to Gradle 8 requirements.
- New GDX Setup projects now use Gradle 8.4 and AGP Plugin 8.1.2 which require at least Java 17.
- Fixed Timer#stop, remember time spent stopped and delay tasks when started again. #7281

[1.12.1]
- LWJGL3 Improvement: Audio device is automatically switched if it was changed in the operating system.
- Tiled Fix: TiledLayer parallax default values fix
- API Addition: TiledDrawable: Align can be set to manipulate the alignment of the rendering (TiledDrawable#setAlign, TiledDrawable#getAlign)
- API Addition: TiledDrawable#draw: Also available as a static function (with align) if you don't want to create an extra instance per texture region
- Android: Removed mouse catching added on 1.12.0 due to unintended effects (see #7187).
- Android: Fixed touch state inconsistency when touching screen with 3 fingers on some devices (see #7256)
- iOS: Update to MobiVM 2.3.20
- API Addition: Using "object" property in Tiled object now fetches MapObject being pointed to, and BaseTmxMapLoader includes method for fetching map where key is id and value is MapObject instance.
- Update to LWJGL 3.3.3
- API Addition: Vector4 is just like Vector2 or Vector3, but with x, y, z, and w float components; a Vector4 can be passed as a shader uniform.
- Fix: Fix crash with ANGLE GLES renderer
- API Change: Use STBVorbis to decode ogg data for Sound
- API Change: Remove usage of deprecated tag on GL30
- Lower GLIBC requirements to 2.17 in order to support older Linux systems
- Fix: Fix setCursor releasing the caught cursor on the LWJGL 3 backend.
- Fix crash in ParticleEditor and Flame 
- Fix bitwise precedence in ModelBatch#addMesh (float[] vertices, short[] indices)
- Improve the default font's compatibility with GL30
- Fix potential IndexOutOfBoundsException on AsynchronousAndroidSound