@@ -99,6 +99,9 @@ public class AndroidApplicationConfiguration {
 	/** The maximum number of threads to use for network requests. Default is {@link Integer#MAX_VALUE}. */
 	public int maxNetThreads = Integer.MAX_VALUE;
 
+	/** set this to true to render under the display cutout. Use the Graphics::getSafeInsetXX to get the safe render space */
+	public boolean renderUnderCutout;
+
 	/** The loader used to load native libraries. Override this to use a different loading strategy. */
 	public GdxNativeLoader nativeLoader = new GdxNativeLoader() {
 		@Override
