@@ -5,6 +5,7 @@
 - libGDX is now built using Java 17 due to Gradle 8 requirements.
 - New GDX Setup projects now use Gradle 8.4 and AGP Plugin 8.1.2 which require at least Java 17.
 - Fixed Timer#stop, remember time spent stopped and delay tasks when started again. #7281
+- Android: Add configuration option to render under the cutout if available on the device.
 
 [1.12.1]
 - LWJGL3 Improvement: Audio device is automatically switched if it was changed in the operating system.
